# python-practice

./: .gitignore  Calculate_Fractions.py  Calculate_Grades.py  JOURNEY.md  LICENSE  Node_Tree.py  Ordered_List.py  Prime.py  QuickSort_OrderedList.py  README.md  RandomNumber_List.py  Reverse_List.py  Word_Jumble.py  button.py  gameText.py  gasMileage.py  inheritedList.py  outcomeView.py  pyproject.toml  requirements.txt  threecardmonte.py
3-Card-Monte/: button.py  gameText.py  outcomeView.py  threecardmonte.py
old/: Calculate_Fractions.py  Calculate_Grades.py  Node_Tree.py  Ordered_List.py  Prime.py  QuickSort_OrderedList.py  RandomNumber_List.py  Reverse_List.py  Word_Jumble.py  gasMileage.py  gasMileage_FileTest.txt  inheritedList.py  namecount.py  sentence.py
programming_concepts/: add_interest.py  addinterest.py  animation.py  animation2.py  average.py  avg2.py  button.py  calc.py  calc.pyw  cball.py  cdieview.py  change.py  chaos.py  click.py  click_n_type.py  clickntype.py  convert.py  convert_gui.py  date_convert.py  dateconvert.py  dieview.py  event_loop.py  factorial.py  futval.py  futval_graph.py  gpa.py  gpa_sort.py  graph.py  graphics.py  hanoi.py  happy.py  maxn.py  month.py  msdie.py  numbers2text.py  numbers_2_text.py  obj_rball.py  printfile.py  projectile.py  quadratic.py  (+14 more)
programming_concepts/3-Card-Monte/: gameText.py
programming_concepts/ch1/: chaos.py
programming_concepts/ch2/: avg.py  futval.py
programming_concepts/ch3/: change.py
programming_concepts/classes/: dice.py  (+4 more)
src/: calc.py  convert.py  futval.py  gpa.py  graph.py  searches.py
(+22 files in other folders)
