[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-practice"
description = "A collection of Python exercises to practice coding."
authors = [{ name = "Craig Hurley", email = "chingdorp@pm.me" }]
version = "1.0.0"
readme = "README.md"
license = "MIT"
dependencies = [
    "python >=3.6, <3.12",
    "click >=7.1.2, <9.0.0",
]

[project.urls]
Repository = "https://github.com/chingdrop/python-practice"