[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-practice"
description = "A collection of Python exercises to practice coding."
authors = [{ name = "Craig Hurley", email = "chingdorp@pm.me" }]
version = "1.0.0"
readme = "README.md"
license = "MIT"
dependencies = [
    "click >=7.1.2",
]

[project.urls]
Repository = "https://github.com/chingdrop/python-practice"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = { where = ["src"] }

[tool.setuptools.package-dir]
"" = "src"